--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,6 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
     <%= yield %>
-<!--      render 'shared/footer' %> -->
+    <%= render 'shared/footer' %>
   </body>
 </html>
