--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer flex-column">
+<div class="footer-bar flex-column">
 
   <div class="d-flex justify-content-between">
     <div id="footer-logo" class="d-flex w-50 justify-content-center align-items-start">
