--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,23 +14,7 @@
   <hr>
   <div class="display-file">
     <div>
-      <div class="mt-3">
-        <h4>Asccotiated cases</h4>
-        <ul>
-          <% @links.each do |link| %>
-            <% if link.project == @project %>
-              <li>
-                <%= link_to(case_path(link.case)) do %>
-                  <!-- should be link.case.title after title added to Case-->
-                  Case <%= link.case.id %>
-                <% end %>
-              </li>
-            <% end %>
-          <% end %>
-        </ul>
-      </div>
-
-      <div class="">
+      <div class="w-50">
         <!-- Condition to be added: admin and collaborators only-->
         <h4>Link a case</h4>
           <%= simple_form_for([@project, @link]) do |f| %>
@@ -38,8 +22,73 @@
             <%= f.button :submit, class: "btn btn-s-blue" %>
           <% end %>
       </div>
-
       <div class="mt-3">
+        <h4>Asccotiated cases</h4>
+        <ul class="cards-project" >
+          <% @links.each do |link| %>
+            <% if link.project == @project %>
+              <li class="card-case">
+                <div class="card-doctor-email">
+                  <span><%= link.case.user.full_name.upcase %></span>
+                  <p><%= link.case.user.email %></p>
+                </div>
+                <div class="card-main-infos">
+                  <%= link_to(case_path(link.case)) do %>
+                    <!-- should be link.case.title after title added to Case-->
+                    <h2>Case <%= link.case.id %> : <%= link.case.title %></h2>
+                    <p><%= link.case.description %></p>
+                  <% end %>
+                </div>
+                <div class="card-bottom-infos">
+                  <div class="card-gender-age">
+                    <!-- add link to patient profile page-->
+                    <% if  link.case.patient.gender == "female"%>
+                        <p class="rounded-gender">F</p>
+                    <% else %>
+                        <p class="rounded-gender">M</p>
+                    <% end %>
+                    <span class="card-age"><%= link.case.patient.age %> <span class="card-year">year</span></span>
+                   <!--  <span>Patient: <%= link.case.patient.id %></span> -->
+                  </div>
+                  <div>
+                    <%= link_to "Read more ￫",case_path(link.case) %>
+                  </div>
+                </div>
+              </li>
+            <% end %>
+          <% end %>
+        </ul>
+      </div>
+
+    </div>
+
+    <div>
+      <div class="mt-3">
+        <h4>Comment</h4>
+        <div class="card">
+          <% @project.comments.each do |comment| %>
+            <p>Dr.<%= comment.user.last_name %>: <%=  comment.content %></p>
+          <% end %>
+        </div>
+        <div class="">
+            <%= simple_form_for([@project, @comment]) do |f| %>
+              <%= f.input :content  %>
+              <%= f.button :submit, class: "btn btn-s-blue" %>
+            <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="card mt-3">
+        <h4>Doctor Info</h4>
+        <% @project.creator_collaborations.each do |c| %>
+          <%= link_to c.user.full_name, user_path(c.user) %>
+          <br><%= c.user.specialization %>
+          <br><%= c.user.email %>
+        <% end %>
+      </div>
+      <div class="card mt-3">
        <h4>Collaborators</h4>
          <ul>
            <% @project.my_collaborations.each do |collaboration| %>
@@ -51,21 +100,6 @@
         <div>
           <%= link_to 'Become a collaborator', collaboration_path(@project), class: "btn-s-blue" %>
         </div>
-      </div>
-    </div>
-
-    <div class="mt-3">
-      <h4>Comment</h4>
-      <div class="card">
-        <% @project.comments.each do |comment| %>
-          <p>Dr.<%= comment.user.last_name %>: <%=  comment.content %></p>
-        <% end %>
-      </div>
-      <div class="">
-          <%= simple_form_for([@project, @comment]) do |f| %>
-            <%= f.input :content  %>
-            <%= f.button :submit, class: "btn btn-s-blue" %>
-          <% end %>
       </div>
     </div>
   </div>
