--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,30 @@
 <div class="container">
-
-  <h1>My profile</h1>
-  <div>
-    <h4>Doctor info</h4>
-    <p>Dr <%= @user.first_name %><%= @user.last_name %></p>
-    <p><%= @user.specialization %></p>
-    <p><%= @user.email %></p>
+  <div id="dashboard-top">
+    <div id="list-buttons">
+      <ul>
+        <li> <%= link_to "+ patient", new_case_path %></li>
+        <li><%= link_to "+ case", new_case_path %></li>
+        <li><%= link_to "+ project", new_project_path %></li>
+      </ul>
+    </div>
+    <div>
+      <div class="d-flex justify-content-between">
+        <h1>Hello <%= @user.first_name %></h1>
+        <p><%= @user.specialization %></p>
+      </div>
+      <p><%= @user.email %></p>
+    </div>
   </div>
 
   <hr>
+  <div class="d-flex justify-content-between">
+    <ul class="list-inline">
+      <li class="list-inline-item">My Patients</li>
+      <li class="list-inline-item">My Cases</li>
+      <li class="list-inline-item">My Projects</li>
+      <li class="list-inline-item">My Collaborations</li>
+    </ul>
+  </div>
 
   <div>
     <div class="d-flex justify-content-between my-3">
