Added accordion and banner to case show page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,6 +8,11 @@
   justify-content: center;
 }
 
+.small-banner {
+  height: 400px;
+  background-color: black;
+}
+
 // homepage(title)
 .banner-title {
   color: white;
