--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,22 +1,31 @@
 <div class="small-banner"></div>
   <div class="container py-5">
     <div class="mt-3">
-      <h4>Doctor info:</h4>
-      <p>Dr <%= @case.user.first_name %><%= @case.user.last_name %></p>
-      <p><%= @case.user.specialization %></p>
-      <p><%= @case.user.email %></p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="d-flex justify-content-between">
+            <div>
+              <p class="doctor-name"><%= @case.user.first_name.upcase %> <%= @case.user.last_name.upcase %></p>
+              <p class="doctor-specialization"><%= @case.user.specialization %></p>
+            </div>
+            <p class="doctor-email"><%= @case.user.email %></p>
+        </div>
+        <hr>
+        </div>
+      </div>
     </div>
-    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
   </div>
+    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
 
-    <div>
-      <h2 class="mb-3">Case: <%= @case.title %></h2>
-      <% if current_user == @case.user %>
-        <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
-        <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
-      <% end %>
-      <h4 class="mt-3">Description:</h4>
-      <p><%= @case.description %></p>
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-8">
+        <% if current_user == @case.user %>
+          <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
+          <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
+        <% end %>
+        <h2 class="title mb-5">Case: <%= @case.title %></h2>
+        <p class="global-text"><%= @case.description %></p>
+      </div>
 
       <div>
         <% @case.patient.photos.each do |photo| %>
@@ -28,14 +37,13 @@
           <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
         <% end %>
       </div>
-
     </div>
 
 
   <div class="accordion-container py-5">
-    <h2>Medical Report</h2>
       <div class="row d-flex justify-content-center">
-          <div class="col-md-6">
+          <div class="col-md-8">
+            <h2 class="title mb-5">Medical Report</h2>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                   <div class="panel panel-default">
                       <div class="panel-heading" role="tab" id="headingOne">
@@ -126,18 +134,21 @@
       </div>
   </div>
 
-  <div class="mt-3">
-    <h2>Projects</h2>
-      <p>List of the projects this case is involved in</p>
+  <div class="light-blue-rectangle"></div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-8">
+      <h2 class="title mb-5 projects-title pt-5">PROJECTS</h2>
+      <p class="global-text">List of the projects this case is involved in</p>
       <ul>
         <% @links.each do |link| %>
           <% if link.case == @case %>
-            <li>
-              <%= link_to(project_path(link.project)) do %>
-                <%= link.project.name %>
-              <% end %>
+            <li> <%= link_to(project_path(link.project)) do %>
+              <%= link.project.name %>
+            <% end %>
             </li>
           <% end %>
         <% end %>
       </ul>
     </div>
+  </div>
