Inline style added to list of projects

--- a/app/assets/stylesheets/pages/_case.scss
+++ b/app/assets/stylesheets/pages/_case.scss
@@ -20,22 +20,7 @@
   color: #132C3A;
 }
 
-.doctor-name{
-  color: #132C3A;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 0px;
-}
-
-.doctor-specialization{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.doctor-email{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
-  font-weight: 100;
+.light-blue-rectangle{
+  height: 50px;
+  background-color: #38E1ED;
 }
