--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -15,10 +15,10 @@
       </div>
     </div>
   </div>
-    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
 
     <div class="row d-flex justify-content-center">
       <div class="col-md-8">
+    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
         <% if current_user == @case.user %>
           <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
           <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
@@ -138,14 +138,19 @@
 
   <div class="row d-flex justify-content-center">
     <div class="col-md-8">
-      <h2 class="title mb-5 projects-title pt-5">PROJECTS</h2>
-      <p class="global-text">List of the projects this case is involved in</p>
-      <ul>
+      <h2 class="projects-title pt-5 mb-2">PROJECTS</h2>
+      <ul class="list-inline">
+        <li class="list-inline-item">List of the projects this case is involved in</li>
+        <li class="list-inline-item">Collaborator</li>
+      </ul>
+
+      <ul class=" pl-0">
         <% @links.each do |link| %>
           <% if link.case == @case %>
             <li> <%= link_to(project_path(link.project)) do %>
               <%= link.project.name %>
             <% end %>
+              <%= link.project.collaborations.count %>
             </li>
           <% end %>
         <% end %>
