--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -45,8 +45,9 @@ a.navbar-brand {
   border-radius: 0 20px 20px 0;
   background: $m-blue;
   color: rgb(206, 212, 218);
-  border: 0.1px solid rgb(206, 212, 218);
+  border: 1px solid rgb(206, 212, 218);
   border-left: none;
+  padding: 5px 12px;
   &:hover {
     color: white;
   }
