--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,4 +1,35 @@
-<div class="small-banner"></div>
+<div class="small-banner" style="background-image: url('<%= cl_image_path "pexels-rfstudio-3825539_v0zo7h", crop: :fill %>')">
+  <div class="row d-flex justify-content-center">
+    <div class="small-banner-text col-md-8">
+      <h2>CASE</h2>
+      <h1 class="banner-title">Name<%= @case.title %></h1>
+      <a href="#case-title">Read more</a>
+    </div>
+  </div>
+</div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-8">
+    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
+        <% if current_user == @case.user %>
+          <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
+          <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
+        <% end %>
+        <h2 id="case-title" class="title">Case: <%= @case.title %></h2>
+        <p class="global-text"><%= @case.description %></p>
+      </div>
+
+      <div>
+        <% @case.patient.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
+      </div>
+      <div>
+        <% @case.patient.documents.each do |document| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
+      </div>
+    </div>
+
   <div class="container py-5">
     <div class="mt-3">
       <div class="row">
@@ -15,30 +46,6 @@
       </div>
     </div>
   </div>
-
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-8">
-    <%= link_to "Back to list of cases", cases_path, class: "btn-s-blue mt-2" %>
-        <% if current_user == @case.user %>
-          <%= link_to "Edit", edit_case_path(@case), class: "btn-s-blue" %>
-          <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
-        <% end %>
-        <h2 class="title mb-5">Case: <%= @case.title %></h2>
-        <p class="global-text"><%= @case.description %></p>
-      </div>
-
-      <div>
-        <% @case.patient.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-        <% end %>
-      </div>
-      <div>
-        <% @case.patient.documents.each do |document| %>
-          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-        <% end %>
-      </div>
-    </div>
-
 
   <div class="accordion-container py-5">
       <div class="row d-flex justify-content-center">
