--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,18 @@
 <div class ="container">
   <div class="d-flex justify-content-between my-3">
     <h1>Projects</h1>
+    <div>
+      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
+        <%= button_tag :submit, class: "btn btn-search-index" do %>
+          <i class="fas fa-search"></i>
+        <% end %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control search-bar-index",
+          placeholder: ""
+        %>
+      <% end %>
+    </div>
   </div>
   <ul id ="project-container">
     <% @projects.each do |project| %>
