--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,12 @@
 // homepage(searchbar)
-.btn-r-blue {
-  border-radius: 36px;
-  border: 1px solid $m-blue;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  background: $m-blue;
-  opacity: 1;
-  padding: 13px 50px;
-  color: white;
+.btn-in-searchbar {
+  border-radius: 36px 0 0 36px;
+  box-shadow: 0 8px 4px -4px rgba(0,0,0,0.2);
+  background: white;
+  opacity: 85%;
+  padding: 8px 40px;
+  color: $m-blue;
+  font-size: 36px;
   &:hover {
     box-shadow: 0px 0px 10px rgba(56,225,237,0.7);
     color: white;
