--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,31 +5,18 @@
       <h1>Dedication is our specialty</h1>
     </div>
 
-    <div class="">
-      <%= form_tag projects_path, method: :get, class: "d-flex justify-content-center" do %>
-          <%= text_field_tag :query,
-            params[:query],
-            class: "form-control search-bar-lg w-100 mr-3",
-            placeholder: "Search a project"
-          %>
-          <%= button_tag :submit, class: "btn btn-r-blue" do %>
-            <i class="fas fa-search"></i>
-          <% end %>
+    <div class="search-bar">
+      <%= form_tag search_path, method: :get, class: "d-flex justify-content-center" do %>
+        <%= button_tag :submit, class: "btn btn-in-searchbar" do %>
+          <i class="fas fa-search"></i>
+        <% end %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control search-bar-lg w-100 mr-3",
+          placeholder: "Enter search keyword"
+        %>
+        <%= select_tag(:search_option,  options_for_select([['All Projects', 'projects'], ['All Cases', 'cases']]), id: "search-opt") %>
       <% end %>
-    </div>
-
-    <div class="input-group">
-      <input type="text" class="form-control" aria-label="Text input with dropdown button">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div role="separator" class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-      </div>
     </div>
   </div>
 </div>
