--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -65,14 +65,14 @@
     <div>
       <div class="mt-3">
         <h4>Comment</h4>
-        <div class="card">
+        <div id="comments" class="card" data-project-id="<%= @project.id %>">
           <% @project.comments.each do |comment| %>
-            <p>Dr.<%= comment.user.last_name %>: <%=  comment.content %></p>
+            <%= render 'comments/comment', comment: comment %>
           <% end %>
         </div>
         <div class="">
-            <%= simple_form_for([@project, @comment]) do |f| %>
-              <%= f.input :content  %>
+            <%= simple_form_for [@project, @comment], remote: true do |f| %>
+              <%= f.input :content, label: false, placeholder: "Comment #{current_user.full_name}" %>
               <%= f.button :submit, class: "btn btn-s-blue" %>
             <% end %>
         </div>
