--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -16,7 +16,7 @@
           <%= link_to "Delete", case_path(@case), method: :delete, data: { confirm: "Are you sure?"}, class: "btn-s-blue" %>
         <% end %>
         <h2 id="case-title" class="title">Case: <%= @case.title %></h2>
-        <p class="global-text"><%= @case.description %></p>
+        <div class="global-text"><%= @case.description %></div>
         <hr>
         <div>
           <p class="doctor-name"><%= @case.user.first_name.upcase %> <%= @case.user.last_name.upcase %></p>
@@ -71,11 +71,10 @@
                       </div>
                       <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                           <div class="panel-body panel-grid">
-
-                              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl lorem, dictum id pellentesque at, vestibulum ut arcu. Curabitur erat libero, egestas eu tincidunt ac, rutrum ac justo. Vivamus condimentum laoreet lectus, blandit posuere tortor aliquam vitae. Curabitur molestie eros. </p> -->
                               <% if @case.patient.medications.attached? %>
                                 <% @case.patient.medications.each do |medication| %>
-                                <div class="file-thumbnail" style="background-image: url('<%= cl_image_path medication.key%>')"> </div>
+
+                                  <%= render partial: 'medication-modal', locals: { item: medication } %>
                                 <% end %>
                               <% end %>
                           </div>
