match project show page structure with figma design

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+<div class="banner-home" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
                            url('https://images.pexels.com/photos/1170979/pexels-photo-1170979.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
   <div>
     <div class="banner-title ml-0 text-center">
