--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,18 @@
 .banner {
+  min-height: 300px;
+  height: 45vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .banner-text {
+    color: white;
+  }
+}
+
+.banner-home {
   height: 80vh;
   background-size: cover;
   background-position: center;
@@ -7,7 +21,6 @@
   align-items: center;
   justify-content: center;
 }
-
 
 // homepage(title)
 .banner-title {
