--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,19 +1,53 @@
-<div class="container py-5">
-
-  <h1><%= @project.name %></h1>
-  <div>
-    <p>Description: <%= @project.description %></p>
-
-    <p>Completed: <%= @project.completed ? "yes" : "no" %></p>
-
-    <% if @project.is_admin?(current_user.id) %>
-      <p><%= link_to "Edit", edit_project_path(@project), class: "btn-s-blue" %></p>
-    <% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+                           url('project-show.jpg')">
+  <div class="banner-text">
+    <h4>Project</h4>
+    <h2><%= @project.name %></h2>
   </div>
-
-  <hr>
-  <div class="display-file">
+</div>
+<div class="container">
+  <div class="description">
+    <h3><%= @project.name %></h3>
+    <div class="user-info">
+      <div class="mr-2"><%= image_tag "logo.png", class: "avatar" %></div>
+      <% @project.creator_collaborations.each do |c| %>
+        <div>
+          <%= link_to c.user.full_name, user_path(c.user), class: "user-info-name" %>
+          <p class="user-info-detail"><%= c.user.specialization %></p>
+        </div>
+        <div class="ml-auto mt-1 user-info-detail"><%= c.user.email %></div>
+      <% end %>
+    </div>
+    <hr>
     <div>
+      <p><%= @project.description %></p>
+      <!--<p>Completed: < @project.completed ? "yes" : "no" %></p>-->
+      <% if @project.is_admin?(current_user.id) %>
+        <p><%= link_to "Edit", edit_project_path(@project), class: "btn-s-blue" %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="collaborator mt-3">
+  <div class="container">
+    <h4>Collaborators</h4>
+    <div class="collaborator-list">
+      <ul>
+       <% @project.my_collaborations.each do |collaboration| %>
+         <li>
+           <%= link_to collaboration.user.full_name, user_path(collaboration.user) %>
+         </li>
+       <% end %>
+      </ul>
+      <div>
+        <%= link_to 'Become a collaborator', collaboration_path(@project), class: "btn-s-blue" %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container py-5">
+  <div class="display-file">
+    <div class="case">
       <div class="w-50">
         <!-- Condition to be added: admin and collaborators only-->
         <h4>Link a case</h4>
@@ -59,49 +93,21 @@
           <% end %>
         </ul>
       </div>
-
     </div>
-
-    <div>
-      <div class="mt-3">
-        <h4>Comment</h4>
-        <div id="comments" class="card" data-project-id="<%= @project.id %>">
-          <% @project.comments.each do |comment| %>
-            <%= render 'comments/comment', comment: comment %>
-          <% end %>
-        </div>
-        <div class="">
-            <%= simple_form_for [@project, @comment], remote: true do |f| %>
-              <%= f.input :content, label: false, placeholder: "Comment #{current_user.full_name}" %>
-              <%= f.button :submit, class: "btn btn-s-blue" %>
-            <% end %>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      <div class="card mt-3">
-        <h4>Doctor Info</h4>
-        <% @project.creator_collaborations.each do |c| %>
-          <%= link_to c.user.full_name, user_path(c.user) %>
-          <br><%= c.user.specialization %>
-          <br><%= c.user.email %>
+    <div class="comment">
+      <h4>Comment</h4>
+      <div id="comments" class="card" data-project-id="<%= @project.id %>">
+        <% @project.comments.each do |comment| %>
+          <%= render 'comments/comment', comment: comment %>
         <% end %>
       </div>
-      <div class="card mt-3">
-       <h4>Collaborators</h4>
-         <ul>
-           <% @project.my_collaborations.each do |collaboration| %>
-             <li>
-               <%= link_to collaboration.user.full_name, user_path(collaboration.user) %>
-             </li>
-           <% end %>
-         </ul>
-        <div>
-          <%= link_to 'Become a collaborator', collaboration_path(@project), class: "btn-s-blue" %>
-        </div>
-      </div>
     </div>
+  </div>
+  <div class="">
+      <%= simple_form_for [@project, @comment], remote: true do |f| %>
+        <%= f.input :content, label: false, placeholder: "Comment #{current_user.full_name}" %>
+        <%= f.button :submit, class: "btn btn-s-blue" %>
+      <% end %>
   </div>
 
 </div>
