Added css to description and projects list within case show page

--- a/app/assets/stylesheets/components/_accordion.scss
+++ b/app/assets/stylesheets/components/_accordion.scss
@@ -92,3 +92,12 @@ a:hover,a:focus{
   background-repeat: no-repeat;
   background-position: center center;
 }
+
+.file-original{
+  border-radius: 4px;
+  height: 300px;
+  width: 225px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
