--- a/app/views/cases/_medication-modal.html.erb
+++ b/app/views/cases/_medication-modal.html.erb
@@ -15,7 +15,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="file-thumbnail" style="background-image: url('<%= cl_image_path item.key%>')"> </div>
+        <div class="file-original" style="background-image: url('<%= cl_image_path item.key%>')"> </div>
       </div>
 <!--  <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
