--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -48,14 +48,19 @@
 <div class="container py-5">
   <div class="display-file">
     <div class="case">
-      <div class="w-50">
-        <!-- Condition to be added: admin and collaborators only-->
-        <h4>Link a case</h4>
-          <%= simple_form_for([@project, @link]) do |f| %>
-            <%= f.association :case, label: "Pick a case", collection: current_user.cases %>
-            <%= f.button :submit, class: "btn btn-s-blue" %>
+        <div class="d-flex align-item-center">
+          <h4>Case</h4>
+          <%= form_tag cases_path, method: :get, class: "d-flex justify-content-center" do %>
+            <%= button_tag :submit, class: "btn btn-search-index" do %>
+              <i class="fas fa-search"></i>
+            <% end %>
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control search-bar-index",
+              placeholder: ""
+            %>
           <% end %>
-      </div>
+        </div>
       <div class="mt-3">
         <h4>Asccotiated cases</h4>
         <ul class="cards-project" >
@@ -93,21 +98,36 @@
           <% end %>
         </ul>
       </div>
+      <div class="w-50">
+        <h4>Add my case</h4>
+          <%= simple_form_for([@project, @link]) do |f| %>
+            <%= f.association :case, label: false, collection: current_user.cases %>
+            <%= f.button :submit, class: "btn btn-s-blue" %>
+          <% end %>
+      </div>
     </div>
     <div class="comment">
-      <h4>Comment</h4>
       <div id="comments" class="card" data-project-id="<%= @project.id %>">
         <% @project.comments.each do |comment| %>
           <%= render 'comments/comment', comment: comment %>
         <% end %>
       </div>
+      <div class="">
+        <div class="user-info">
+          <div class="mr-2"><%= image_tag "logo.png", class: "avatar" %></div>
+          <% @project.creator_collaborations.each do |c| %>
+            <div>
+              <%= link_to c.user.full_name, user_path(c.user), class: "user-info-name" %>
+              <p class="user-info-detail"><%= c.user.specialization %></p>
+            </div>
+          <% end %>
+        </div>
+        <%= simple_form_for [@project, @comment], remote: true do |f| %>
+          <%= f.input :content, label: false, placeholder: "Comment #{current_user.full_name}" %>
+          <%= f.button :submit, class: "btn btn-s-blue" %>
+        <% end %>
+      </div>
     </div>
-  </div>
-  <div class="">
-      <%= simple_form_for [@project, @comment], remote: true do |f| %>
-        <%= f.input :content, label: false, placeholder: "Comment #{current_user.full_name}" %>
-        <%= f.button :submit, class: "btn btn-s-blue" %>
-      <% end %>
   </div>
 
 </div>
