Added more css on case show page along with fake symptoms list

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -43,6 +43,7 @@
     font-size: 40px;
     font-weight: 700;
     color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
   h2{
     font-family: 'Montserrat', sans-serif;
@@ -50,8 +51,10 @@
     font-weight: 400;
     color: white;
     margin-bottom: 0px;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
   a{
     color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 }
