--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,4 +1,4 @@
-<div class="small-banner" style="background-image: url('<%= cl_image_path "pexels-rfstudio-3825539_v0zo7h", crop: :fill %>')">
+<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "pexels-rfstudio-3825539_v0zo7h", crop: :fill %>')">
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
@@ -150,6 +150,48 @@
       </div>
   </div>
 
+  <div id="symptoms-section">
+    <div class="symptoms-container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8 d-flex">
+          <div class="col-md-6 mb-5">
+            <h2>Description of the symptoms</h2>
+         </div>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8 d-flex">
+          <div class="col-md-6 mb-5">
+            <h3>Sed ut perspiciatis</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+          </div>
+          <div class="col-md-6  mb-5">
+            <h3>Sed ut perspiciatis</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-8 d-flex">
+          <div class="col-md-6">
+            <h3>Sed ut perspiciatis</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+          </div>
+          <div class="col-md-6">
+            <h3>Sed ut perspiciatis</h3>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="light-blue-rectangle"></div>
 
   <div class="row d-flex justify-content-center pb-5">
@@ -157,11 +199,11 @@
       <h2 class="projects-title pt-5 mb-2 pl-0">PROJECTS</h2>
         <div>
           <div class="row">
-            <div class="col-md-6 d-flex justify-content-between pl-0 pr-0">
-              <p>List of the projects this case is involved in</p>
+            <div class="col-md-6 d-flex justify-content-between pr-0">
+              <p>Projects in which this case is involved</p>
               <p><i class="fas fa-user-friends"></i></p>
             </div>
-            <div class="col-md-6 d-flex justify-content-end pl-0 pr-0">
+            <div class="col-md-6 d-flex justify-content-end">
               <p><i class="fas fa-user-friends"></i></p>
             </div>
 
