--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,13 +34,13 @@
 
 .purple-button{
   color: #3734AA;
-  border-radius: 25px;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   font-weight: 400;
   &:hover{
-    font-weight: 700;
+    // font-weight: 700;
     color: #3734AA;
+    border-bottom: 3px solid #3734AA;
   }
 
 }
