Added color variables to stylesheets

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,6 +7,15 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+
+
+// Our colors
+$m-blue-dark: #061433;
 $m-blue: #3734AA;
-$m-bluelight: #38E1ED;
+$m-blue-light: #38E1ED;
+$m-blue-grey-light: #E8F2FF;
+$m-grey: #F6F9FF;
+$m-grey-light: #E5E5E5;
+
+
+// $gray-light: #F4F4F4;
