project show page in progress

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,10 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
-                           url('project-show.jpg')">
-  <div class="banner-text">
-    <h4>Project</h4>
-    <h2><%= @project.name %></h2>
+<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),
+                           url('../../assets/images/project-show.jpg')">
+  <div class="container">
+    <div class="small-banner-text col-md-8">
+      <h2>Project</h2>
+      <h1><%= @project.name %></h1>
+    </div>
   </div>
 </div>
 <div class="container">
