--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,17 +1,4 @@
-.banner {
-  min-height: 300px;
-  height: 45vh;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .banner-text {
-    color: white;
-  }
-}
-
+// homepage(banner)
 .banner-home {
   height: 80vh;
   background-size: cover;
@@ -41,6 +28,19 @@
 }
 //
 
+.banner {
+  min-height: 300px;
+  height: 45vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  .banner-text {
+    color: white;
+  }
+}
 // index and show pages of case and project
 .small-banner {
   height: 500px;
