--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,6 +7,8 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
+
+// For Bloom
 $light-gray: #F4F4F4;
 $m-blue: #3734AA;
 $m-bluelight: #38E1ED;
