Resolved conflict about color variables

--- a/app/assets/stylesheets/components/_comment.scss
+++ b/app/assets/stylesheets/components/_comment.scss
@@ -1,6 +1,6 @@
 .comment-container {
   border-radius: 16px;
-  background: $comment-blue;
+  background: $m-grey;
   padding: 14px 20px;
   margin-bottom: 16px;
   .comment-text {
