--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -4,12 +4,12 @@
 
     <div>
       <!-- form to create a case(+ option to add a patient) -->
-      <form>
+      <form class="form">
         <fieldset id="linkPatient">
           <input type="radio" value="1" name="linkPatient" id="chooseExist">
-          <label class="" for="chooseExist">Choose existing patient</label>
+          <label class="radio1" for="chooseExist">Choose existing patient</label>
           <input type="radio" value="0" name="linkPatient" id="createNew">
-          <label class="" for="createNew">Create new patient</label>
+          <label class="radio2" for="createNew">Create new patient</label>
         </fieldset>
       </form>
         <%= simple_form_for(@case) do |f| %>
