Added all documents to accordion

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -42,5 +42,9 @@
     color: #3734AA;
     border-bottom: 3px solid #3734AA;
   }
+}
 
+.modal-button{
+  background-color: transparent;
+  border: none;
 }
