added style form case

--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -2,14 +2,14 @@
   <div class="my-5">
     <h1>Create a case</h1>
 
-    <div>
+    <div class="form">
       <!-- form to create a case(+ option to add a patient) -->
-      <form class="form">
+      <form>
         <fieldset id="linkPatient">
-          <input type="radio" value="1" name="linkPatient" id="chooseExist">
+          <input type="radio" value="1" name="linkPatient" id="chooseExist" checked>
           <label class="radio1" for="chooseExist">Choose existing patient</label>
           <input type="radio" value="0" name="linkPatient" id="createNew">
-          <label class="radio2" for="createNew">Create new patient</label>
+          <label class="radio1" for="createNew">Create new patient</label>
         </fieldset>
       </form>
         <%= simple_form_for(@case) do |f| %>
