--- a/app/assets/stylesheets/components/_create-case-form.scss
+++ b/app/assets/stylesheets/components/_create-case-form.scss
@@ -1,8 +1,43 @@
 .form {
   background-color: white;
-  box-shadow: 3px grey;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
   max-width: 600px;
   padding: 25px;
+}
+
+.form input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio1 {
+    display: inline-block;
+    background-color: #393DA4;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
+    padding: 10px 20px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border-radius: 20px;
+    &:hover {
+    box-shadow: 0px 0px 10px rgba(56,225,237,0.7);
+    color: white;
+    text-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    text-decoration: none;
+  }
+}
+
+.form input[type="radio"]:label {
+  background-color: blue;
+  border-radius: 20px;
+  border: 1px solid $m-blue;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  opacity: 1;
+  padding: 6px 12px;
+  color: $m-blue;
+  text-decoration: none;
 }
 
 
