Added title input field to form in  case new page and title to banner in case show page

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -1,9 +1,9 @@
-<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "pexels-rfstudio-3825539_v0zo7h", crop: :fill %>')">
+<div class="small-banner" style="background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url('<%= cl_image_path "pexels-tima-miroshnichenko-5407212_nwdzks", crop: :fill %>')">
   <div class="container">
     <div>
       <div class="small-banner-text col-md-8">
         <h2>CASE</h2>
-        <h1 class="banner-title">Name<%= @case.title %></h1>
+        <h1 class="banner-title"><%= @case.title %></h1>
         <a href="#medical-report-anchor">Medical report</a>
       </div>
     </div>
