--- a/app/views/cases/new.html.erb
+++ b/app/views/cases/new.html.erb
@@ -13,6 +13,7 @@
         </fieldset>
       </form>
         <%= simple_form_for(@case) do |f| %>
+          <%= f.input :title, as: :text %>
           <%= f.input :description, as: :text %>
           <!-- 1. pick an existing patient -->
           <div id="create-patient">
