--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,86 +1,56 @@
 <div class="container">
   <div id="dashboard-top">
     <div>
-      <div class="d-flex justify-content-between">
-        <h1>Hello <%= @user.first_name %></h1>
-        <p><%= @user.specialization %></p>
+      <div class="d-flex align-items-end mt-3">
+        <h2 class="mb-2"><strong>Hello <%= @user.first_name %></strong></h2>
+        <p class="mb-2 ml-5"><%= @user.specialization %></p>
       </div>
-      <p><%= @user.email %></p>
+      <p class="mb-5 text-muted small"><%= @user.email %></p>
     </div>
-    <div id="list-buttons">
-      <ul>
-        <li> <%= link_to "+ patient", new_case_path %></li>
-        <li><%= link_to "+ case", new_case_path %></li>
-        <li><%= link_to "+ project", new_project_path %></li>
-      </ul>
-    </div>
+    <%= render("creation_menu") %>
   </div>
+
 
   <hr>
-  <div class="d-flex justify-content-between">
-    <ul class="list-inline">
-      <li class="list-inline-item">My Patients</li>
-      <li class="list-inline-item">My Cases</li>
-      <li class="list-inline-item">My Projects</li>
-      <li class="list-inline-item">My Collaborations</li>
+  <div class="">
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link" id="patients-tab" data-toggle="tab" href="#patients" role="tab" aria-controls="patients" aria-selected="false">My patients</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" id="cases-tab" data-toggle="tab" href="#cases" role="tab" aria-controls="cases" aria-selected="true">My cases</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="projects-tab" data-toggle="tab" href="#projects" role="tab" aria-controls="projects" aria-selected="false">My projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="collaborations-tab" data-toggle="tab" href="#collaborations" role="tab" aria-controls="collaborations" aria-selected="false">My collaborations</a>
+      </li>
     </ul>
+
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade" id="patients" role="tabpanel" aria-labelledby="patients-tab">
+        <p>1</p>
+      </div>
+      <div class="tab-pane fade show active" id="cases" role="tabpanel" aria-labelledby="cases-tab">
+        <%= render("case_card") %>
+      </div>
+      <div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="projects-tab">
+        <%= render("project_card") %>
+      </div>
+      <div class="tab-pane fade" id="collaborations" role="tabpanel" aria-labelledby="collaborations-tab">
+        <%= render("collaboration_card") %>
+      </div>
+    </div>
+
   </div>
 
-  <div>
-    <div class="d-flex justify-content-between my-3">
-      <h4>My projects</h4>
-      <%= link_to "+ project", new_project_path, class: "btn-s-blue" %>
-    </div>
-    <ul>
-      <% @user.admin_projects.each do |project| %>
-        <li><%= link_to project.name, project_path(project) %></li>
-      <% end %>
-    </ul>
-  </div>
-  <hr>
-
-  <div>
-    <div class="d-flex justify-content-between my-3">
-      <h4>My cases</h4>
-      <%= link_to "+ case", new_case_path, class: "btn-s-blue" %>
-    </div>
-    <ul class="cards-container">
-      <% @user.cases.each do |c| %>
-        <li class="card-case">
-          <div class="card-doctor-email">
-            <span><%= c.user.full_name.upcase %></span>
-            <p><%= c.user.email %></p>
-          </div>
-          <div class="card-main-infos">
-              <!-- should show case title-->
-            <h2>Case <%= c.id %> : <%= c.title %></h2>
-            <p><%= c.description %></p>
-          </div>
-          <div class="card-bottom-infos">
-            <div class="card-gender-age">
-              <!-- add link to patient profile page-->
-              <% if  c.patient.gender == "female"%>
-                  <p class="rounded-gender">F</p>
-              <% else %>
-                  <p class="rounded-gender">M</p>
-              <% end %>
-              <span class="card-age"><%= c.patient.age %> <span class="card-year">year</span></span>
-             <!--  <span>Patient: <%= c.patient.id %></span> -->
-            </div>
-            <div>
-              <%= link_to "Read more ￫",case_path(c) %>
-            </div>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
   <hr>
 
   <div>
     <div class="d-flex justify-content-between my-3">
       <h4>My patients</h4>
-      <%= link_to "+ patient", new_case_path, class: "btn-s-blue" %>
     </div>
       <ul>
         <% @user.patients.each do |patient| %>
@@ -92,19 +62,6 @@
           </li>
         <% end %>
       </ul>
-  </div>
-
-  <div>
-    <h4>My collaborations</h4>
-
-      <ul>
-        <% @user.my_collaborations.each do |collaboration| %>
-          <li>
-            <%= link_to collaboration.project.name, project_path(collaboration.project) %>
-          </li>
-        <% end %>
-      </ul>
-
   </div>
 
 </div>
